parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE
    IF
    REPEAT
    UNTIL

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Main Funcoes
Rule 2     Main -> FUNC MAIN { Declaracoes Instrucoes }
Rule 3     Funcoes -> Funcoes Funcao
Rule 4     Funcoes -> <empty>
Rule 5     Funcao -> FUNC NAME { Instrucoes }
Rule 6     Declaracoes -> DECL { Decls }
Rule 7     Decls -> Decls Decl
Rule 8     Decls -> <empty>
Rule 9     Decl -> INT ID ;
Rule 10    Decl -> INT ID ATRIB ExpCond ;
Rule 11    Instrucoes -> INST { Insts }
Rule 12    Insts -> Insts Inst
Rule 13    Insts -> <empty>
Rule 14    Inst -> PRINT ( Log ) ;
Rule 15    Inst -> READ ( ID ) ;
Rule 16    Inst -> ID ATRIB ExpCond ;
Rule 17    Log -> NOT Log
Rule 18    Log -> Log AND FactCond
Rule 19    Log -> Log OR FactCond
Rule 20    Log -> FactCond
Rule 21    FactCond -> FactCond LEQ ExpCond
Rule 22    FactCond -> FactCond LES ExpCond
Rule 23    FactCond -> FactCond GEQ ExpCond
Rule 24    FactCond -> FactCond GRE ExpCond
Rule 25    FactCond -> FactCond EQ ExpCond
Rule 26    FactCond -> FactCond DIF ExpCond
Rule 27    FactCond -> ExpCond
Rule 28    ExpCond -> ExpCond ADD TermoCond
Rule 29    ExpCond -> ExpCond SUB TermoCond
Rule 30    ExpCond -> TermoCond
Rule 31    TermoCond -> TermoCond MUL FactorCond
Rule 32    TermoCond -> TermoCond DIV FactorCond
Rule 33    TermoCond -> TermoCond MOD FactorCond
Rule 34    TermoCond -> FactorCond
Rule 35    FactorCond -> ( Log )
Rule 36    FactorCond -> NUM
Rule 37    FactorCond -> ID

Terminals, with rules where they appear

(                    : 14 15 35
)                    : 14 15 35
;                    : 9 10 14 15 16
ADD                  : 28
AND                  : 18
ATRIB                : 10 16
DECL                 : 6
DIF                  : 26
DIV                  : 32
ELSE                 : 
EQ                   : 25
FUNC                 : 2 5
GEQ                  : 23
GRE                  : 24
ID                   : 9 10 15 16 37
IF                   : 
INST                 : 11
INT                  : 9 10
LEQ                  : 21
LES                  : 22
MAIN                 : 2
MOD                  : 33
MUL                  : 31
NAME                 : 5
NOT                  : 17
NUM                  : 36
OR                   : 19
PRINT                : 14
READ                 : 15
REPEAT               : 
SUB                  : 29
UNTIL                : 
error                : 
{                    : 2 5 6 11
}                    : 2 5 6 11

Nonterminals, with rules where they appear

Decl                 : 7
Declaracoes          : 2
Decls                : 6 7
ExpCond              : 10 16 21 22 23 24 25 26 27 28 29
FactCond             : 18 19 20 21 22 23 24 25 26
FactorCond           : 31 32 33 34
Funcao               : 3
Funcoes              : 1 3
Inst                 : 12
Instrucoes           : 2 5
Insts                : 11 12
Log                  : 14 17 18 19 35
Main                 : 1
Programa             : 0
TermoCond            : 28 29 30 31 32 33

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Main Funcoes
    (2) Main -> . FUNC MAIN { Declaracoes Instrucoes }

    FUNC            shift and go to state 3

    Programa                       shift and go to state 1
    Main                           shift and go to state 2

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Main . Funcoes
    (3) Funcoes -> . Funcoes Funcao
    (4) Funcoes -> .

    FUNC            reduce using rule 4 (Funcoes -> .)
    $end            reduce using rule 4 (Funcoes -> .)

    Funcoes                        shift and go to state 4

state 3

    (2) Main -> FUNC . MAIN { Declaracoes Instrucoes }

    MAIN            shift and go to state 5


state 4

    (1) Programa -> Main Funcoes .
    (3) Funcoes -> Funcoes . Funcao
    (5) Funcao -> . FUNC NAME { Instrucoes }

    $end            reduce using rule 1 (Programa -> Main Funcoes .)
    FUNC            shift and go to state 7

    Funcao                         shift and go to state 6

state 5

    (2) Main -> FUNC MAIN . { Declaracoes Instrucoes }

    {               shift and go to state 8


state 6

    (3) Funcoes -> Funcoes Funcao .

    FUNC            reduce using rule 3 (Funcoes -> Funcoes Funcao .)
    $end            reduce using rule 3 (Funcoes -> Funcoes Funcao .)


state 7

    (5) Funcao -> FUNC . NAME { Instrucoes }

    NAME            shift and go to state 9


state 8

    (2) Main -> FUNC MAIN { . Declaracoes Instrucoes }
    (6) Declaracoes -> . DECL { Decls }

    DECL            shift and go to state 11

    Declaracoes                    shift and go to state 10

state 9

    (5) Funcao -> FUNC NAME . { Instrucoes }

    {               shift and go to state 12


state 10

    (2) Main -> FUNC MAIN { Declaracoes . Instrucoes }
    (11) Instrucoes -> . INST { Insts }

    INST            shift and go to state 14

    Instrucoes                     shift and go to state 13

state 11

    (6) Declaracoes -> DECL . { Decls }

    {               shift and go to state 15


state 12

    (5) Funcao -> FUNC NAME { . Instrucoes }
    (11) Instrucoes -> . INST { Insts }

    INST            shift and go to state 14

    Instrucoes                     shift and go to state 16

state 13

    (2) Main -> FUNC MAIN { Declaracoes Instrucoes . }

    }               shift and go to state 17


state 14

    (11) Instrucoes -> INST . { Insts }

    {               shift and go to state 18


state 15

    (6) Declaracoes -> DECL { . Decls }
    (7) Decls -> . Decls Decl
    (8) Decls -> .

    }               reduce using rule 8 (Decls -> .)
    INT             reduce using rule 8 (Decls -> .)

    Decls                          shift and go to state 19

state 16

    (5) Funcao -> FUNC NAME { Instrucoes . }

    }               shift and go to state 20


state 17

    (2) Main -> FUNC MAIN { Declaracoes Instrucoes } .

    FUNC            reduce using rule 2 (Main -> FUNC MAIN { Declaracoes Instrucoes } .)
    $end            reduce using rule 2 (Main -> FUNC MAIN { Declaracoes Instrucoes } .)


state 18

    (11) Instrucoes -> INST { . Insts }
    (12) Insts -> . Insts Inst
    (13) Insts -> .

    }               reduce using rule 13 (Insts -> .)
    PRINT           reduce using rule 13 (Insts -> .)
    READ            reduce using rule 13 (Insts -> .)
    ID              reduce using rule 13 (Insts -> .)

    Insts                          shift and go to state 21

state 19

    (6) Declaracoes -> DECL { Decls . }
    (7) Decls -> Decls . Decl
    (9) Decl -> . INT ID ;
    (10) Decl -> . INT ID ATRIB ExpCond ;

    }               shift and go to state 22
    INT             shift and go to state 24

    Decl                           shift and go to state 23

state 20

    (5) Funcao -> FUNC NAME { Instrucoes } .

    FUNC            reduce using rule 5 (Funcao -> FUNC NAME { Instrucoes } .)
    $end            reduce using rule 5 (Funcao -> FUNC NAME { Instrucoes } .)


state 21

    (11) Instrucoes -> INST { Insts . }
    (12) Insts -> Insts . Inst
    (14) Inst -> . PRINT ( Log ) ;
    (15) Inst -> . READ ( ID ) ;
    (16) Inst -> . ID ATRIB ExpCond ;

    }               shift and go to state 25
    PRINT           shift and go to state 27
    READ            shift and go to state 28
    ID              shift and go to state 29

    Inst                           shift and go to state 26

state 22

    (6) Declaracoes -> DECL { Decls } .

    INST            reduce using rule 6 (Declaracoes -> DECL { Decls } .)


state 23

    (7) Decls -> Decls Decl .

    }               reduce using rule 7 (Decls -> Decls Decl .)
    INT             reduce using rule 7 (Decls -> Decls Decl .)


state 24

    (9) Decl -> INT . ID ;
    (10) Decl -> INT . ID ATRIB ExpCond ;

    ID              shift and go to state 30


state 25

    (11) Instrucoes -> INST { Insts } .

    }               reduce using rule 11 (Instrucoes -> INST { Insts } .)


state 26

    (12) Insts -> Insts Inst .

    }               reduce using rule 12 (Insts -> Insts Inst .)
    PRINT           reduce using rule 12 (Insts -> Insts Inst .)
    READ            reduce using rule 12 (Insts -> Insts Inst .)
    ID              reduce using rule 12 (Insts -> Insts Inst .)


state 27

    (14) Inst -> PRINT . ( Log ) ;

    (               shift and go to state 31


state 28

    (15) Inst -> READ . ( ID ) ;

    (               shift and go to state 32


state 29

    (16) Inst -> ID . ATRIB ExpCond ;

    ATRIB           shift and go to state 33


state 30

    (9) Decl -> INT ID . ;
    (10) Decl -> INT ID . ATRIB ExpCond ;

    ;               shift and go to state 34
    ATRIB           shift and go to state 35


state 31

    (14) Inst -> PRINT ( . Log ) ;
    (17) Log -> . NOT Log
    (18) Log -> . Log AND FactCond
    (19) Log -> . Log OR FactCond
    (20) Log -> . FactCond
    (21) FactCond -> . FactCond LEQ ExpCond
    (22) FactCond -> . FactCond LES ExpCond
    (23) FactCond -> . FactCond GEQ ExpCond
    (24) FactCond -> . FactCond GRE ExpCond
    (25) FactCond -> . FactCond EQ ExpCond
    (26) FactCond -> . FactCond DIF ExpCond
    (27) FactCond -> . ExpCond
    (28) ExpCond -> . ExpCond ADD TermoCond
    (29) ExpCond -> . ExpCond SUB TermoCond
    (30) ExpCond -> . TermoCond
    (31) TermoCond -> . TermoCond MUL FactorCond
    (32) TermoCond -> . TermoCond DIV FactorCond
    (33) TermoCond -> . TermoCond MOD FactorCond
    (34) TermoCond -> . FactorCond
    (35) FactorCond -> . ( Log )
    (36) FactorCond -> . NUM
    (37) FactorCond -> . ID

    NOT             shift and go to state 38
    (               shift and go to state 36
    NUM             shift and go to state 43
    ID              shift and go to state 44

    Log                            shift and go to state 37
    FactCond                       shift and go to state 39
    ExpCond                        shift and go to state 40
    TermoCond                      shift and go to state 41
    FactorCond                     shift and go to state 42

state 32

    (15) Inst -> READ ( . ID ) ;

    ID              shift and go to state 45


state 33

    (16) Inst -> ID ATRIB . ExpCond ;
    (28) ExpCond -> . ExpCond ADD TermoCond
    (29) ExpCond -> . ExpCond SUB TermoCond
    (30) ExpCond -> . TermoCond
    (31) TermoCond -> . TermoCond MUL FactorCond
    (32) TermoCond -> . TermoCond DIV FactorCond
    (33) TermoCond -> . TermoCond MOD FactorCond
    (34) TermoCond -> . FactorCond
    (35) FactorCond -> . ( Log )
    (36) FactorCond -> . NUM
    (37) FactorCond -> . ID

    (               shift and go to state 36
    NUM             shift and go to state 43
    ID              shift and go to state 44

    ExpCond                        shift and go to state 46
    TermoCond                      shift and go to state 41
    FactorCond                     shift and go to state 42

state 34

    (9) Decl -> INT ID ; .

    }               reduce using rule 9 (Decl -> INT ID ; .)
    INT             reduce using rule 9 (Decl -> INT ID ; .)


state 35

    (10) Decl -> INT ID ATRIB . ExpCond ;
    (28) ExpCond -> . ExpCond ADD TermoCond
    (29) ExpCond -> . ExpCond SUB TermoCond
    (30) ExpCond -> . TermoCond
    (31) TermoCond -> . TermoCond MUL FactorCond
    (32) TermoCond -> . TermoCond DIV FactorCond
    (33) TermoCond -> . TermoCond MOD FactorCond
    (34) TermoCond -> . FactorCond
    (35) FactorCond -> . ( Log )
    (36) FactorCond -> . NUM
    (37) FactorCond -> . ID

    (               shift and go to state 36
    NUM             shift and go to state 43
    ID              shift and go to state 44

    ExpCond                        shift and go to state 47
    TermoCond                      shift and go to state 41
    FactorCond                     shift and go to state 42

state 36

    (35) FactorCond -> ( . Log )
    (17) Log -> . NOT Log
    (18) Log -> . Log AND FactCond
    (19) Log -> . Log OR FactCond
    (20) Log -> . FactCond
    (21) FactCond -> . FactCond LEQ ExpCond
    (22) FactCond -> . FactCond LES ExpCond
    (23) FactCond -> . FactCond GEQ ExpCond
    (24) FactCond -> . FactCond GRE ExpCond
    (25) FactCond -> . FactCond EQ ExpCond
    (26) FactCond -> . FactCond DIF ExpCond
    (27) FactCond -> . ExpCond
    (28) ExpCond -> . ExpCond ADD TermoCond
    (29) ExpCond -> . ExpCond SUB TermoCond
    (30) ExpCond -> . TermoCond
    (31) TermoCond -> . TermoCond MUL FactorCond
    (32) TermoCond -> . TermoCond DIV FactorCond
    (33) TermoCond -> . TermoCond MOD FactorCond
    (34) TermoCond -> . FactorCond
    (35) FactorCond -> . ( Log )
    (36) FactorCond -> . NUM
    (37) FactorCond -> . ID

    NOT             shift and go to state 38
    (               shift and go to state 36
    NUM             shift and go to state 43
    ID              shift and go to state 44

    Log                            shift and go to state 48
    FactCond                       shift and go to state 39
    ExpCond                        shift and go to state 40
    TermoCond                      shift and go to state 41
    FactorCond                     shift and go to state 42

state 37

    (14) Inst -> PRINT ( Log . ) ;
    (18) Log -> Log . AND FactCond
    (19) Log -> Log . OR FactCond

    )               shift and go to state 49
    AND             shift and go to state 50
    OR              shift and go to state 51


state 38

    (17) Log -> NOT . Log
    (17) Log -> . NOT Log
    (18) Log -> . Log AND FactCond
    (19) Log -> . Log OR FactCond
    (20) Log -> . FactCond
    (21) FactCond -> . FactCond LEQ ExpCond
    (22) FactCond -> . FactCond LES ExpCond
    (23) FactCond -> . FactCond GEQ ExpCond
    (24) FactCond -> . FactCond GRE ExpCond
    (25) FactCond -> . FactCond EQ ExpCond
    (26) FactCond -> . FactCond DIF ExpCond
    (27) FactCond -> . ExpCond
    (28) ExpCond -> . ExpCond ADD TermoCond
    (29) ExpCond -> . ExpCond SUB TermoCond
    (30) ExpCond -> . TermoCond
    (31) TermoCond -> . TermoCond MUL FactorCond
    (32) TermoCond -> . TermoCond DIV FactorCond
    (33) TermoCond -> . TermoCond MOD FactorCond
    (34) TermoCond -> . FactorCond
    (35) FactorCond -> . ( Log )
    (36) FactorCond -> . NUM
    (37) FactorCond -> . ID

    NOT             shift and go to state 38
    (               shift and go to state 36
    NUM             shift and go to state 43
    ID              shift and go to state 44

    Log                            shift and go to state 52
    FactCond                       shift and go to state 39
    ExpCond                        shift and go to state 40
    TermoCond                      shift and go to state 41
    FactorCond                     shift and go to state 42

state 39

    (20) Log -> FactCond .
    (21) FactCond -> FactCond . LEQ ExpCond
    (22) FactCond -> FactCond . LES ExpCond
    (23) FactCond -> FactCond . GEQ ExpCond
    (24) FactCond -> FactCond . GRE ExpCond
    (25) FactCond -> FactCond . EQ ExpCond
    (26) FactCond -> FactCond . DIF ExpCond

    )               reduce using rule 20 (Log -> FactCond .)
    AND             reduce using rule 20 (Log -> FactCond .)
    OR              reduce using rule 20 (Log -> FactCond .)
    LEQ             shift and go to state 53
    LES             shift and go to state 54
    GEQ             shift and go to state 55
    GRE             shift and go to state 56
    EQ              shift and go to state 57
    DIF             shift and go to state 58


state 40

    (27) FactCond -> ExpCond .
    (28) ExpCond -> ExpCond . ADD TermoCond
    (29) ExpCond -> ExpCond . SUB TermoCond

    LEQ             reduce using rule 27 (FactCond -> ExpCond .)
    LES             reduce using rule 27 (FactCond -> ExpCond .)
    GEQ             reduce using rule 27 (FactCond -> ExpCond .)
    GRE             reduce using rule 27 (FactCond -> ExpCond .)
    EQ              reduce using rule 27 (FactCond -> ExpCond .)
    DIF             reduce using rule 27 (FactCond -> ExpCond .)
    )               reduce using rule 27 (FactCond -> ExpCond .)
    AND             reduce using rule 27 (FactCond -> ExpCond .)
    OR              reduce using rule 27 (FactCond -> ExpCond .)
    ADD             shift and go to state 59
    SUB             shift and go to state 60


state 41

    (30) ExpCond -> TermoCond .
    (31) TermoCond -> TermoCond . MUL FactorCond
    (32) TermoCond -> TermoCond . DIV FactorCond
    (33) TermoCond -> TermoCond . MOD FactorCond

    ADD             reduce using rule 30 (ExpCond -> TermoCond .)
    SUB             reduce using rule 30 (ExpCond -> TermoCond .)
    LEQ             reduce using rule 30 (ExpCond -> TermoCond .)
    LES             reduce using rule 30 (ExpCond -> TermoCond .)
    GEQ             reduce using rule 30 (ExpCond -> TermoCond .)
    GRE             reduce using rule 30 (ExpCond -> TermoCond .)
    EQ              reduce using rule 30 (ExpCond -> TermoCond .)
    DIF             reduce using rule 30 (ExpCond -> TermoCond .)
    )               reduce using rule 30 (ExpCond -> TermoCond .)
    AND             reduce using rule 30 (ExpCond -> TermoCond .)
    OR              reduce using rule 30 (ExpCond -> TermoCond .)
    ;               reduce using rule 30 (ExpCond -> TermoCond .)
    MUL             shift and go to state 61
    DIV             shift and go to state 62
    MOD             shift and go to state 63


state 42

    (34) TermoCond -> FactorCond .

    MUL             reduce using rule 34 (TermoCond -> FactorCond .)
    DIV             reduce using rule 34 (TermoCond -> FactorCond .)
    MOD             reduce using rule 34 (TermoCond -> FactorCond .)
    ADD             reduce using rule 34 (TermoCond -> FactorCond .)
    SUB             reduce using rule 34 (TermoCond -> FactorCond .)
    LEQ             reduce using rule 34 (TermoCond -> FactorCond .)
    LES             reduce using rule 34 (TermoCond -> FactorCond .)
    GEQ             reduce using rule 34 (TermoCond -> FactorCond .)
    GRE             reduce using rule 34 (TermoCond -> FactorCond .)
    EQ              reduce using rule 34 (TermoCond -> FactorCond .)
    DIF             reduce using rule 34 (TermoCond -> FactorCond .)
    )               reduce using rule 34 (TermoCond -> FactorCond .)
    AND             reduce using rule 34 (TermoCond -> FactorCond .)
    OR              reduce using rule 34 (TermoCond -> FactorCond .)
    ;               reduce using rule 34 (TermoCond -> FactorCond .)


state 43

    (36) FactorCond -> NUM .

    MUL             reduce using rule 36 (FactorCond -> NUM .)
    DIV             reduce using rule 36 (FactorCond -> NUM .)
    MOD             reduce using rule 36 (FactorCond -> NUM .)
    ADD             reduce using rule 36 (FactorCond -> NUM .)
    SUB             reduce using rule 36 (FactorCond -> NUM .)
    LEQ             reduce using rule 36 (FactorCond -> NUM .)
    LES             reduce using rule 36 (FactorCond -> NUM .)
    GEQ             reduce using rule 36 (FactorCond -> NUM .)
    GRE             reduce using rule 36 (FactorCond -> NUM .)
    EQ              reduce using rule 36 (FactorCond -> NUM .)
    DIF             reduce using rule 36 (FactorCond -> NUM .)
    )               reduce using rule 36 (FactorCond -> NUM .)
    AND             reduce using rule 36 (FactorCond -> NUM .)
    OR              reduce using rule 36 (FactorCond -> NUM .)
    ;               reduce using rule 36 (FactorCond -> NUM .)


state 44

    (37) FactorCond -> ID .

    MUL             reduce using rule 37 (FactorCond -> ID .)
    DIV             reduce using rule 37 (FactorCond -> ID .)
    MOD             reduce using rule 37 (FactorCond -> ID .)
    ADD             reduce using rule 37 (FactorCond -> ID .)
    SUB             reduce using rule 37 (FactorCond -> ID .)
    LEQ             reduce using rule 37 (FactorCond -> ID .)
    LES             reduce using rule 37 (FactorCond -> ID .)
    GEQ             reduce using rule 37 (FactorCond -> ID .)
    GRE             reduce using rule 37 (FactorCond -> ID .)
    EQ              reduce using rule 37 (FactorCond -> ID .)
    DIF             reduce using rule 37 (FactorCond -> ID .)
    )               reduce using rule 37 (FactorCond -> ID .)
    AND             reduce using rule 37 (FactorCond -> ID .)
    OR              reduce using rule 37 (FactorCond -> ID .)
    ;               reduce using rule 37 (FactorCond -> ID .)


state 45

    (15) Inst -> READ ( ID . ) ;

    )               shift and go to state 64


state 46

    (16) Inst -> ID ATRIB ExpCond . ;
    (28) ExpCond -> ExpCond . ADD TermoCond
    (29) ExpCond -> ExpCond . SUB TermoCond

    ;               shift and go to state 65
    ADD             shift and go to state 59
    SUB             shift and go to state 60


state 47

    (10) Decl -> INT ID ATRIB ExpCond . ;
    (28) ExpCond -> ExpCond . ADD TermoCond
    (29) ExpCond -> ExpCond . SUB TermoCond

    ;               shift and go to state 66
    ADD             shift and go to state 59
    SUB             shift and go to state 60


state 48

    (35) FactorCond -> ( Log . )
    (18) Log -> Log . AND FactCond
    (19) Log -> Log . OR FactCond

    )               shift and go to state 67
    AND             shift and go to state 50
    OR              shift and go to state 51


state 49

    (14) Inst -> PRINT ( Log ) . ;

    ;               shift and go to state 68


state 50

    (18) Log -> Log AND . FactCond
    (21) FactCond -> . FactCond LEQ ExpCond
    (22) FactCond -> . FactCond LES ExpCond
    (23) FactCond -> . FactCond GEQ ExpCond
    (24) FactCond -> . FactCond GRE ExpCond
    (25) FactCond -> . FactCond EQ ExpCond
    (26) FactCond -> . FactCond DIF ExpCond
    (27) FactCond -> . ExpCond
    (28) ExpCond -> . ExpCond ADD TermoCond
    (29) ExpCond -> . ExpCond SUB TermoCond
    (30) ExpCond -> . TermoCond
    (31) TermoCond -> . TermoCond MUL FactorCond
    (32) TermoCond -> . TermoCond DIV FactorCond
    (33) TermoCond -> . TermoCond MOD FactorCond
    (34) TermoCond -> . FactorCond
    (35) FactorCond -> . ( Log )
    (36) FactorCond -> . NUM
    (37) FactorCond -> . ID

    (               shift and go to state 36
    NUM             shift and go to state 43
    ID              shift and go to state 44

    FactCond                       shift and go to state 69
    ExpCond                        shift and go to state 40
    TermoCond                      shift and go to state 41
    FactorCond                     shift and go to state 42

state 51

    (19) Log -> Log OR . FactCond
    (21) FactCond -> . FactCond LEQ ExpCond
    (22) FactCond -> . FactCond LES ExpCond
    (23) FactCond -> . FactCond GEQ ExpCond
    (24) FactCond -> . FactCond GRE ExpCond
    (25) FactCond -> . FactCond EQ ExpCond
    (26) FactCond -> . FactCond DIF ExpCond
    (27) FactCond -> . ExpCond
    (28) ExpCond -> . ExpCond ADD TermoCond
    (29) ExpCond -> . ExpCond SUB TermoCond
    (30) ExpCond -> . TermoCond
    (31) TermoCond -> . TermoCond MUL FactorCond
    (32) TermoCond -> . TermoCond DIV FactorCond
    (33) TermoCond -> . TermoCond MOD FactorCond
    (34) TermoCond -> . FactorCond
    (35) FactorCond -> . ( Log )
    (36) FactorCond -> . NUM
    (37) FactorCond -> . ID

    (               shift and go to state 36
    NUM             shift and go to state 43
    ID              shift and go to state 44

    FactCond                       shift and go to state 70
    ExpCond                        shift and go to state 40
    TermoCond                      shift and go to state 41
    FactorCond                     shift and go to state 42

state 52

    (17) Log -> NOT Log .
    (18) Log -> Log . AND FactCond
    (19) Log -> Log . OR FactCond

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    )               reduce using rule 17 (Log -> NOT Log .)
    AND             shift and go to state 50
    OR              shift and go to state 51

  ! AND             [ reduce using rule 17 (Log -> NOT Log .) ]
  ! OR              [ reduce using rule 17 (Log -> NOT Log .) ]


state 53

    (21) FactCond -> FactCond LEQ . ExpCond
    (28) ExpCond -> . ExpCond ADD TermoCond
    (29) ExpCond -> . ExpCond SUB TermoCond
    (30) ExpCond -> . TermoCond
    (31) TermoCond -> . TermoCond MUL FactorCond
    (32) TermoCond -> . TermoCond DIV FactorCond
    (33) TermoCond -> . TermoCond MOD FactorCond
    (34) TermoCond -> . FactorCond
    (35) FactorCond -> . ( Log )
    (36) FactorCond -> . NUM
    (37) FactorCond -> . ID

    (               shift and go to state 36
    NUM             shift and go to state 43
    ID              shift and go to state 44

    ExpCond                        shift and go to state 71
    TermoCond                      shift and go to state 41
    FactorCond                     shift and go to state 42

state 54

    (22) FactCond -> FactCond LES . ExpCond
    (28) ExpCond -> . ExpCond ADD TermoCond
    (29) ExpCond -> . ExpCond SUB TermoCond
    (30) ExpCond -> . TermoCond
    (31) TermoCond -> . TermoCond MUL FactorCond
    (32) TermoCond -> . TermoCond DIV FactorCond
    (33) TermoCond -> . TermoCond MOD FactorCond
    (34) TermoCond -> . FactorCond
    (35) FactorCond -> . ( Log )
    (36) FactorCond -> . NUM
    (37) FactorCond -> . ID

    (               shift and go to state 36
    NUM             shift and go to state 43
    ID              shift and go to state 44

    ExpCond                        shift and go to state 72
    TermoCond                      shift and go to state 41
    FactorCond                     shift and go to state 42

state 55

    (23) FactCond -> FactCond GEQ . ExpCond
    (28) ExpCond -> . ExpCond ADD TermoCond
    (29) ExpCond -> . ExpCond SUB TermoCond
    (30) ExpCond -> . TermoCond
    (31) TermoCond -> . TermoCond MUL FactorCond
    (32) TermoCond -> . TermoCond DIV FactorCond
    (33) TermoCond -> . TermoCond MOD FactorCond
    (34) TermoCond -> . FactorCond
    (35) FactorCond -> . ( Log )
    (36) FactorCond -> . NUM
    (37) FactorCond -> . ID

    (               shift and go to state 36
    NUM             shift and go to state 43
    ID              shift and go to state 44
